# gist

./: .gitignore  CMakeLists.txt  colorgist.cc  colorgist.h  coloronly.cc  colorport.cc  colortool.cc  extColorGist.cc  extGist.cc  feature.cpp  feature.hpp  gist_feature.cpp  gist_feature.hpp
